[tool.poetry]
name = "dhcpstaticmapper"
version = "0.1.0"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
APScheduler = "^3.10.4"
python-dotenv= "^1.0.1"
beautifulsoup4 = "^4.12.3"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src/DHCPStaticMapper"